--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="apple-touch-icon" href="/img/touch/apple-touch-icon.png" />
     <link rel="icon" sizes="192x192" href="/img/touch/chrome-touch-icon-192x192.png" />
 
-    <base href="/">
+    <base href="/apple-store-product-comparison/">
   </head>
   <body>
     <a ng-href="/a">Thing A</a>
@@ -41,6 +41,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular-route.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="apple-store-product-comparison/app.js"></script>
   </body>
 </html>
