--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular-route.min.js"></script>
-    <script type="text/javascript" src="apple-store-product-comparison/app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
