--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <base href="/apple-store-product-comparison/">
   </head>
   <body>
-    <a ng-href="/a">Thing A</a>
-    <a ng-href="/b">Thing B</b>
-    <a ng-href="/c">Thing C</c>
+    <a ng-href="a">Thing A</a>
+    <a ng-href="b">Thing B</a>
+    <a ng-href="c">Thing C</a>
     <div ng-view></div>
 
 
