--- a/index.html
+++ b/index.html
@@ -27,18 +27,13 @@
 
     <!-- Define an icon for a few specific devices, which are utilized when
     a visitor chooses to add your website to their home-screen: -->
-    <link rel="apple-touch-icon" href="/img/touch/apple-touch-icon.png" />
-    <link rel="icon" sizes="192x192" href="/img/touch/chrome-touch-icon-192x192.png" />
+    <link rel="apple-touch-icon" href="images/apple-192.png" />
+    <link rel="icon" sizes="192x192" href="images/apple-192.png" />
 
     <base href="/apple-store-product-comparison/">
   </head>
   <body>
-    <a ng-href="a">Thing A</a>
-    <a ng-href="b">Thing B</a>
-    <a ng-href="c">Thing C</a>
     <div ng-view></div>
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular-route.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
