--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <link rel="stylesheet/less" type="text/css" href="style.less" />
     <link rel="stylesheet" type="text/css" href="main.css" />
 
-    <!-- <base href="/apple-store-product-comparison/"> -->
-    <base href="/">
+    <base href="/apple-store-product-comparison/">
+    <!-- <base href="/"> -->
   </head>
   <body>
     <div ng-view ng-class="{flex: $location.url() != '/'}"></div>
