more products and words

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Some devices allow you to define the color of various parts of the
     user interface when your website is launched: -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="msapplication-TileColor" content="#0099cc" />
     <meta name="theme-color" content="#0099cc" />
 
