wording and images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     ******************************************************************** -->
 
     <!-- Set the website's width to match the device's width and scale: -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
     <!-- Inform devices that this website is "mobile web app capable": -->
     <meta name="mobile-web-app-capable" content="yes" />
@@ -24,6 +24,8 @@
     creates a home-screen icon for it: -->
     <meta name="application-name" content="App Store" />
     <meta name="apple-mobile-web-app-title" content="App Store" />
+
+    <title>Apple Store</title>
 
     <!-- Define an icon for a few specific devices, which are utilized when
     a visitor chooses to add your website to their home-screen: -->
